[package]
name = "pin-list"
version = "0.1.1"
edition = "2021"
rust-version = "1.60.0"
description = "A safe `Pin`-based intrusive doubly linked list"
repository = "https://github.com/SabrinaJewson/pin-list.rs"
license = "MIT"
keywords = ["PinList"]
categories = ["data-structures", "no-std"]

[features]
alloc = []
std = ["alloc"]

[dependencies]
pin-project-lite = "0.2.9"
pinned-aliasable = "0.1.3"

[dev-dependencies]
pin-utils = "0.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_nightly"]
